--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -57,24 +57,24 @@ let rd_for = (elementf, keyf, rdf) => (vm0, vm1, dom, domc) => {
 
 		let isSameOrder = vm0.length == vm1.length;
 		let domc0 = domc;
-		let dom_i1 = [];
+		let dom0_i1 = [];
 
 		for (let i1 = 0; i1 < vm1.length; i1++) {
 			var i0 = map0.get(keyf(vm1[i1]));
 			isSameOrder &= i0 == i1;
-			dom_i1.push(domc.childNodes[i0]);
+			dom0_i1.push(domc0.childNodes[i0]);
 		}
 
 		if (isSameOrder)
 			for (let i = 0; i < vm1.length; i++)
-				rdf(vm0[i], vm1[i], domc, dom_i1[i]);
+				rdf(vm0[i], vm1[i], domc, dom0_i1[i]);
 		else {
 			domc = domc0.cloneNode(false);
 
 			for (let i1 = 0; i1 < vm1.length; i1++) {
 				var i0 = map0.get(keyf(vm1[i1]));
 				if (i0 != null) {
-					let child0 = dom_i1[i1];
+					let child0 = dom0_i1[i1];
 					domc.appendChild(child0);
 					rdf(vm0[i0], vm1[i1], domc, child0);
 				} else
