--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -37,7 +37,7 @@ let rd_element = (elementf, childrenf) => (vm0, vm1, dom, domc) => {
 			childrenf[i](null, vm1, domc, null);
 	} else if (vm1 == null) {
 		for (let i = 0; i < childrenf.length; i++)
-			childrenf[i](vm0, null, domc, dom.childNodes[i]);
+			childrenf[i](vm0, null, domc, domc.childNodes[i]);
 		dom.removeChild(domc);
 	} else if (vm0 != vm1)
 		for (let i = 0; i < childrenf.length; i++)
