--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -33,14 +33,14 @@ let newElement = (tag, attrs, children) => {
 let rd_element = (elementf, decorf, childrenf) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = elementf());
-		decorf(null, vm1, dom, domc);
+		decorf(vm0, vm1, dom, domc);
 		for (let i = 0; i < childrenf.length; i++)
-			childrenf[i](null, vm1, domc, null);
+			childrenf[i](vm0, vm1, domc, null);
 	} else if (vm1 == null) {
 		let children = Array.from(domc.childNodes);
 		for (let i = 0; i < childrenf.length; i++)
-			childrenf[i](vm0, null, domc, children[i]);
-		decorf(vm0, null, dom, domc);
+			childrenf[i](vm0, vm1, domc, children[i]);
+		decorf(vm0, vm1, dom, domc);
 		dom.removeChild(domc);
 	} else if (vm0 != vm1) {
 		decorf(vm0, vm1, dom, domc);
@@ -51,9 +51,9 @@ let rd_element = (elementf, decorf, childrenf) => (vm0, vm1, dom, domc) => {
 
 let rd_ifElse = (iff, thenf, elsef) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null)
-		(iff(vm1) ? thenf : elsef)(null, vm1, dom, null);
+		(iff(vm1) ? thenf : elsef)(vm0, vm1, dom, null);
 	else if (vm1 == null)
-		(iff(vm0) ? thenf : elsef)(vm0, null, dom, domc);
+		(iff(vm0) ? thenf : elsef)(vm0, vm1, dom, domc);
 	else if (vm0 != vm1)
 		if (iff(vm0) == iff(vm1))
 			thenf(vm0, vm1, dom, domc);
@@ -76,12 +76,12 @@ let rd_if = (iff, thenf) => rd_ifElse(iff, thenf, (vm0, vm1, dom, domc) => {
 let rd_for = (elementf, decorf, keyf, rdf) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = elementf());
-		decorf(null, vm1, dom, domc);
+		decorf(vm0, vm1, dom, domc);
 		for (let i1 = 0; i1 < vm1.length; i1++) rdf(null, vm1[i1], domc, null);
 	} else if (vm1 == null) {
 		let children = Array.from(domc.childNodes);
 		for (let i0 = 0; i0 < vm0.length; i0++) rdf(vm0[i0], null, domc, children[i0]);
-		decorf(vm0, null, dom, domc);
+		decorf(vm0, vm1, dom, domc);
 		dom.removeChild(domc);
 	} else if (vm0 != vm1) {
 		decorf(vm0, vm1, dom, domc);
