--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -61,7 +61,7 @@ let rd_elementFor = (elementf, decorfs, keyf, rdf) => (vm0, vm1, dom, domc) => {
 		let domc0 = domc;
 
 		for (let i1 = 0; i1 < vm1.length; i1++) {
-			var i0 = map0.get(keyf(vm1[i1]));
+			let i0 = map0.get(keyf(vm1[i1]));
 			isSameOrder &= i0 == i1;
 		}
 
@@ -72,7 +72,7 @@ let rd_elementFor = (elementf, decorfs, keyf, rdf) => (vm0, vm1, dom, domc) => {
 			domc = domc0.cloneNode(false);
 
 			for (let i1 = 0; i1 < vm1.length; i1++) {
-				var i0 = map0.get(keyf(vm1[i1]));
+				let i0 = map0.get(keyf(vm1[i1]));
 				if (i0 != null) {
 					let child0 = children[i0];
 					domc.appendChild(child0);
