--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -86,7 +86,7 @@ let rd_for = (keyf, rdf) => (vm0, vm1, dom, domc) => {
 
 let rd_ifElse = (iff, thenf, elsef) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null)
-		(iff(vm1) ? thenf : elsef)(vm0, vm1, dom, null);
+		(iff(vm1) ? thenf : elsef)(vm0, vm1, dom, domc);
 	else if (vm1 == null)
 		(iff(vm0) ? thenf : elsef)(vm0, vm1, dom, domc);
 	else if (vm0 != vm1)
