--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -83,15 +83,8 @@ let rd_for = (keyf, rdf) => (vm0, vm1, dom, domc) => {
 };
 
 let rd_ifElse = (iff, thenf, elsef) => (vm0, vm1, dom, domc) => {
-	if (vm0 == null)
-		(iff(vm1) ? thenf : elsef)(vm0, vm1, dom, domc);
-	else if (vm1 == null)
-		(iff(vm0) ? thenf : elsef)(vm0, vm1, dom, domc);
-	else if (vm0 != vm1)
-		if (iff(vm0) == iff(vm1))
-			thenf(vm0, vm1, dom, domc);
-		else
-			(iff(vm1) ? thenf : elsef)(vm0, vm1, dom, domc);
+	if (vm0 != vm1)
+		(iff(vm1 != null ? vm1 : vm0) ? thenf : elsef)(vm0, vm1, dom, domc);
 };
 
 let rd_if = (iff, thenf) => rd_ifElse(iff, thenf, (vm0, vm1, dom, domc) => {
